fixed alignment issue navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,6 @@
 .navbar {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     height: 80px;
-    display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
@@ -15,7 +14,7 @@
     justify-content: center;
     align-items: center;
     height: 80px;
-    max-width: 1500px;
+    width: 100%;
   }
   
   .navbar-logo {
@@ -25,7 +24,7 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
-    display: flex;
+    display: inline-flex;
     align-items: center;
   }
   
